New best model on internal evaluation

--- a/notebooks/006_automatic_creation_of_arenas.ipynb
+++ b/notebooks/006_automatic_creation_of_arenas.ipynb
@@ -41,8 +41,8 @@
    "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-27T09:11:19.889211Z",
-     "start_time": "2019-10-27T09:11:19.863592Z"
+     "end_time": "2019-10-30T05:25:08.151013Z",
+     "start_time": "2019-10-30T05:25:08.139176Z"
     }
    },
    "outputs": [],
@@ -57,8 +57,8 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2019-10-27T09:11:20.821964Z",
-     "start_time": "2019-10-27T09:11:20.348196Z"
+     "end_time": "2019-10-30T05:25:09.015640Z",
+     "start_time": "2019-10-30T05:25:08.464964Z"
     }
    },
    "outputs": [],
@@ -6002,6 +6002,209 @@
    ],
    "source": [
     "folderpath = '/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_019_all'\n",
+    "os.makedirs(folderpath, exist_ok=True)\n",
+    "time_limit = 1000\n",
+    "n_repeat = 2\n",
+    "n_configs = 16\n",
+    "for idx in tqdm(range(n_configs)):\n",
+    "    arena_config = generate_arena_config(t=time_limit, n=n_repeat)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    for arena_config_path in glob.glob('/media/guillermo/Data/Dropbox/02 Inteligencia Artificial/31_animalai/orangutan/data/env_configs/train_004/*.yaml'):\n",
+    "        for _ in range(n_repeat):\n",
+    "            arena_config = merge(arena_config, arena_config_path)\n",
+    "    set_all_arenas_to_same_time(arena_config, time_limit)\n",
+    "    print(len(arena_config.arenas))\n",
+    "    with open('%s/%03d.yaml' % (folderpath, idx), 'w') as f:\n",
+    "        yaml.dump(arena_config, f)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Create a new one for retrain"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2019-10-30T05:28:19.067253Z",
+     "start_time": "2019-10-30T05:25:39.577973Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a86363bb386143d9b94f677258dffa83",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(IntProgress(value=0, max=16), HTML(value='')))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "Food: 39\n",
+      "Preferences: 7\n",
+      "Obstacles: 64\n",
+      "Avoidance: 48\n",
+      "Spatial reasoning: 36\n",
+      "Generalization: 76\n",
+      "Internal models: 36\n",
+      "612\n",
+      "896\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "folderpath = '/media/guillermo/Data/Kaggle/animalai/agents/132_ultratrain_wba_prize_retrain/train_020_all'\n",
     "os.makedirs(folderpath, exist_ok=True)\n",
     "time_limit = 1000\n",
     "n_repeat = 2\n",
